# system_prog_mai_labs

./: CMakeLists.txt  vcpkg.json
allocator/allocator/: CMakeLists.txt
allocator/allocator/include/: pp_allocator.h
allocator/allocator/src/: pp_allocator.cpp
allocator/allocator_boundary_tags/: CMakeLists.txt  main.cpp
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: CMakeLists.txt  allocator_boundary_tags_tests.cpp
allocator/allocator_buddies_system/: CMakeLists.txt
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_buddies_system/tests/: CMakeLists.txt  allocator_buddies_system_tests.cpp
allocator/allocator_global_heap/: CMakeLists.txt  main.cpp
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_global_heap/tests/: CMakeLists.txt  allocator_global_heap_tests.cpp
allocator/allocator_red_black_tree/: CMakeLists.txt
allocator/allocator_red_black_tree/include/: allocator_red_black_tree.h
allocator/allocator_red_black_tree/src/: allocator_red_black_tree.cpp
allocator/allocator_red_black_tree/tests/: CMakeLists.txt  allocator_red_black_tree_tests.cpp
allocator/allocator_sorted_list/: CMakeLists.txt
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
allocator/allocator_sorted_list/tests/: CMakeLists.txt  allocator_sorted_list_tests.cpp
associative_container/: CMakeLists.txt
associative_container/include/: associative_container.h
associative_container/indexing_tree/: CMakeLists.txt
associative_container/indexing_tree/b_plus_tree/: CMakeLists.txt  main.cpp
associative_container/indexing_tree/b_plus_tree/include/: b_plus_tree.h
associative_container/indexing_tree/b_plus_tree/tests/: CMakeLists.txt  b_plus_tree_tests.cpp
associative_container/indexing_tree/b_star_plus_tree/: CMakeLists.txt  main.cpp
associative_container/indexing_tree/b_star_plus_tree/include/: b_star_plus_tree.h
associative_container/indexing_tree/b_star_plus_tree/tests/: CMakeLists.txt  b_star_plus_tree_tests.cpp
associative_container/indexing_tree/b_star_tree/: CMakeLists.txt  main.cpp
associative_container/indexing_tree/b_star_tree/include/: b_star_tree.h
associative_container/indexing_tree/b_star_tree/tests/: CMakeLists.txt  b_star_tree_tests.cpp
associative_container/indexing_tree/b_tree/: CMakeLists.txt  main.cpp
associative_container/indexing_tree/b_tree/include/: b_tree.h
associative_container/indexing_tree/b_tree/tests/: CMakeLists.txt  b_tree_tests.cpp
associative_container/src/: hhh.cpp
common/: CMakeLists.txt
logger/server_logger/src/: server_logger.cpp
